1、添加枚举扩展类 2、完善全自动表格示例页面

--- a/BodeAbp.Samples/Web/WebDemo.Web/Areas/Admin/Views/Home/Table.cshtml
+++ b/BodeAbp.Samples/Web/WebDemo.Web/Areas/Admin/Views/Home/Table.cshtml
@@ -6,33 +6,38 @@
 
 @section customScript{
     <script type="text/javascript">
+        var enums = @Html.Raw(Json.Encode(@ViewBag.Enums));
+
         url = {
-            read: "/api/services/zero/role/GetRolePagedList",
-            add: "/api/services/zero/role/CreateRole",
-            edit: "/api/services/zero/role/UpdateRole",
-            delete: "/api/services/zero/role/DeleteRole"
+            read: "/api/services/product/products/GetProductPagedList",
+            add: "/api/services/product/products/CreateProduct",
+            edit: "/api/services/product/products/UpdateProduct",
+            delete: "/api/services/product/products/DeleteProduct"
         };
         columns = [
                 { data: "id", title: "编号" },
-                { data: "name", title: "角色名", type: "text", query: true, editor: {}, validation: { required: true } },
-                { data: "displayName", title: "显示名称", type: "text", query: true, editor: {}, validation: { required: true } },
-                { data: "isStatic", title: "是否静态角色", type: "switch", query: true, editor: {} },
-                { data: "isDefault", title: "是否默认角色", type: "switch", query: true, editor: {} },
+                { data: "name", title: "商品名称", type: "text", query: true, editor: {} },
+                { data: "brief", title: "商品简介", type: "textarea", query: true, editor: {} },
+                //{ data: "detail", title: "商品详情", type: "richtext", query: true, editor: {} },
+                { data: "price", title: "价格", type: "number", query: true, editor: {} },
+                { data: "cover2", title: "封面", type: "img", editor: {} },
+                { data: "isOnShelf", title: "是否上架", type: "switch", editor: {} },
+                { data: "enumTest", title: "枚举测试", type: "dropdown", editor: {},source:{data:enums} },
+                { data: "onShelfTime", title: "上架时间", type: "timepicker", editor: {} },
                 {
                     title: "操作选项",
                     type: "command",
                     actions: [
                         {
                             name: "操作",
-                            icon:"fa-trash-o",
+                            icon: "fa-trash-o",
                             onClick: function (d) {
-
+                                alert(d["id"]);
                             }
                         }
                     ]
                 }
         ];
     </script>
-
 }
 
