--- a/BodeAbp.Samples/Web/WebDemo.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/BodeAbp.Samples/Web/WebDemo.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -26,6 +26,11 @@
 
     @RenderSection("header", false)
 
+    <script type="text/javascript">
+        layer.config({
+            offset: "50px", //默认距离顶部位置
+        });
+    </script>
 </head>
 
 <body>
