--- a/BodeAbp.Samples/Web/WebDemo.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/BodeAbp.Samples/Web/WebDemo.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -24,6 +24,8 @@
     <script src="~/Content/js/bode/bode.js" type="text/javascript"></script>
     <script src="~/Content/js/bode/bode.ajax.js" type="text/javascript"></script>
 
+    <script src="~/Content/js/vue.js" type="text/javascript"></script>
+
     @RenderSection("header", false)
 
     <script type="text/javascript">
