--- a/BodeAbp.Samples/Web/WebDemo.Web/Areas/Admin/Views/Shared/_GridLayout.cshtml
+++ b/BodeAbp.Samples/Web/WebDemo.Web/Areas/Admin/Views/Shared/_GridLayout.cshtml
@@ -13,6 +13,10 @@
             width: 30%;
             vertical-align: middle;
         }
+        .layer-row-container {
+            display:none;
+            padding: 3px 16px 0 16px;
+        }
     </style>
 }
 
