--- a/src/samples/web/WebDemo.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/src/samples/web/WebDemo.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -9,7 +9,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/AdminStyle")
-
+    <style>
+        .layer-row-container {
+            display:none;
+            padding: 3px 16px 0 16px;
+        }
+    </style>
     <!--Fonts-->
     <link href="http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300" rel="stylesheet" type="text/css" />
     
