--- a/src/samples/web/WebDemo.Web/Areas/Admin/Views/Zero/RoleList.cshtml
+++ b/src/samples/web/WebDemo.Web/Areas/Admin/Views/Zero/RoleList.cshtml
@@ -56,7 +56,7 @@
         };
         tableOption.columns = [
                 { data: "id", title: "编号" },
-                { data: "name", title: "角色名称", type: "text", query: true, editor: { ap: "hide" } },
+                { data: "name", title: "角色名称", type: "text", query: true},
                 { data: "displayName", title: "显示名", type: "textarea", query: true },
                 { data: "isStatic", title: "是否静态角色", type: "switch", query: true },
                 { data: "isDefault", title: "是否默认角色", type: "switch", query: true },
