--- a/src/samples/web/WebDemo.Web/Areas/Admin/Views/Shared/_GridLayout.cshtml
+++ b/src/samples/web/WebDemo.Web/Areas/Admin/Views/Shared/_GridLayout.cshtml
@@ -58,13 +58,13 @@
 @RenderSection("headHtml", false)
 
 <div class="page-container">
-    <div class="page-body">
+    <div class="page-body" style="padding:0;">
         <div class="row">
             <div class="col-xs-12">
                 <div class="widget flat radius-bordered">
-                    <div class="widget-header bg-info">
+                    @*<div class="widget-header bg-info">
                         <span class="widget-caption"><strong>@ViewBag.Title</strong></span>
-                    </div>
+                    </div>*@
                     <div class="widget-body">
                         <div role="grid" id="editabledatatable_wrapper" class="dataTables_wrapper form-inline no-footer">
                             <div class="row" style="padding-bottom: 10px;">
