--- a/src/samples/web/WebDemo.Web/Areas/Admin/Views/Shared/_TreeGridLayout.cshtml
+++ b/src/samples/web/WebDemo.Web/Areas/Admin/Views/Shared/_TreeGridLayout.cshtml
@@ -84,7 +84,7 @@
 @RenderSection("headHtml", false)
 
 <div class="page-container">
-    <div class="page-body">
+    <div class="page-body" style="padding:0;">
         <div class="row">
 
             <div id="tree" class="col-xs-4 col-md-3 col-lg-2">
