--- a/src/samples/web/WebDemo.Web/Areas/Admin/Views/Shared/_GridLayout.cshtml
+++ b/src/samples/web/WebDemo.Web/Areas/Admin/Views/Shared/_GridLayout.cshtml
@@ -7,12 +7,8 @@
     <link href="~/Content/css/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/js/plugs/webuploader/webuploader.css" rel="stylesheet" type="text/css"/>
     <style>
-        .query-input {
-            height: 32px;
-            line-height: 32px;
-            width: 30%;
-            vertical-align: middle;
-        }
+        .query-input {height: 32px;line-height: 32px;width: 30%;vertical-align: middle;}
+        .form-inline .radio input[type=radio], .form-inline .checkbox input[type=checkbox] {position:absolute;}
     </style>
 }
 
