--- a/src/samples/web/WebDemo.Web/Areas/Admin/Views/Account/Login.cshtml
+++ b/src/samples/web/WebDemo.Web/Areas/Admin/Views/Account/Login.cshtml
@@ -8,6 +8,7 @@
     <title>管理信息系统</title>
     <script src="~/Content/js/jquery.min.js" type="text/javascript"></script>
     <script src="~/Content/js/md5.min.js" type="text/javascript"></script>
+    <script src="~/Content/js/store.min.js" type="text/javascript"></script>
     <script src="~/Content/js/plugs/layer/layer.js" type="text/javascript"></script>
     <script src="~/Content/js/bode/bode.js" type="text/javascript"></script>
     <script src="~/Content/js/bode/bode.ajax.js" type="text/javascript"></script>
