--- a/src/samples/web/WebDemo.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/src/samples/web/WebDemo.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -8,9 +8,10 @@
     <script src="~/Content/js/jquery.min.js" type="text/javascript"></script>
     <script src="~/Content/js/plugs/layer/layer.js" type="text/javascript"></script>
     <script src="~/Content/js/vue.js" type="text/javascript"></script>
+    <script src="~/Content/js/md5.min.js" type="text/javascript"></script>
+    <script src="~/Content/js/store.min.js" type="text/javascript"></script>
     <script src="~/Content/js/bode/bode.js" type="text/javascript"></script>
     <script src="~/Content/js/bode/bode.ajax.js" type="text/javascript"></script>
-    
     <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/css/admin/admin.css" rel="stylesheet" />
